--- a/Sistema.DAO/App.config
+++ b/Sistema.DAO/App.config
@@ -2,8 +2,7 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, Z.EntityFramework.Classic, Version=7.0.0.0, Culture=neutral, PublicKeyToken=afc61983f100d280" requirePermission="false" />
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <entityFramework>
     <providers>
@@ -16,5 +15,6 @@
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-  <add name="SistemaEntities" connectionString="metadata=res://*/SistemaModel.csdl|res://*/SistemaModel.ssdl|res://*/SistemaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Sistema;user id=joe;password=123456789*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="SistemaEntities" connectionString="metadata=res://*/SistemaModel.csdl|res://*/SistemaModel.ssdl|res://*/SistemaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Sistema;user id=joe;password=123456789*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
