--- a/Sistema.WebApiAutofac/packages.config
+++ b/Sistema.WebApiAutofac/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="5.0.0" targetFramework="net462" />
+  <package id="Autofac.Owin" version="5.0.1" targetFramework="net462" />
+  <package id="Autofac.WebApi2" version="5.0.0" targetFramework="net462" />
+  <package id="Autofac.WebApi2.Owin" version="5.0.0" targetFramework="net462" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.9" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net462" />
@@ -7,16 +11,14 @@
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.9" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.9" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.9" targetFramework="net462" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net462" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net462" />
   <package id="Microsoft.Owin" version="4.2.2" targetFramework="net462" />
-  <package id="Microsoft.Owin.Host.HttpListener" version="4.2.2" targetFramework="net462" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="2.0.2" targetFramework="net462" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net462" />
-  <package id="Microsoft.Owin.Hosting" version="4.2.2" targetFramework="net462" />
+  <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net462" />
-  <package id="Ninject" version="3.3.6" targetFramework="net462" />
-  <package id="Ninject.Web.Common" version="3.3.2" targetFramework="net462" />
-  <package id="Ninject.Web.Common.Owin" version="3.3.2" targetFramework="net462" />
-  <package id="Ninject.Web.WebApi" version="3.3.1" targetFramework="net462" />
-  <package id="Ninject.Web.WebApi.OwinSelfHost" version="3.3.1" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net462" />
 </packages>
